RefLib: Css partially complete, JS code compartmentalized into functions

--- a/Tuts & Projects/RefLib/index.html
+++ b/Tuts & Projects/RefLib/index.html
@@ -11,13 +11,14 @@
 <body>
 	<header class="row">
 		<div class="small-12 medium-12 large-12 column">
-			<h1>Project Tutledge</h1>
-			<h2>Reference Links from DJFRSN</h2>
-			<ul>
-				<li><a href="#">HTML</a></li>
-				<li><a href="#">{CSS}</a></li>
-				<li><a href="#">JavaScript</a></li>
-				<li><a href="#">Angular</a></li>
+			<h1>Project</h1>
+			<h2>DJFRSN Reference Links</h2>
+			<ul class="navigation">
+				<li><a href="#"><span>|</span>  HTML  <span>|</span></a></li>
+
+				<li><a href="#">CSS  <span>|</span></a></li>
+				<li><a href="#">JS  <span>|</span></a></li>
+				<li><a href="#">NG  <span>|</span></a></li>
 			</ul>
 		</div>
 	</header>
@@ -103,7 +104,7 @@
 				</ul>
 				<h3>JavaScript Links to read</h3>
 				<hr>
-				<ul id="JavaScript-to-read">
+				<ul id="javascript-to-read">
 					<li>
 						<input type="checkbox">
 						<a href="#">Link1</a>
@@ -151,10 +152,111 @@
 						<button class="delete">Delete</button>
 					</li>
 				</ul>
-				
+				<h3>HTML Reference Library</h3>
+				<hr>
+				<ul id="html-read">
+					<li>
+						<input type="checkbox">
+						<a href="#" class="html">Link1</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="html">Link2</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="html">Link3</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+				</ul>
+				<h3>CSS Reference Library</h3>
+				<hr>
+				<ul id="css-read">
+					<li>
+						<input type="checkbox">
+						<a href="#" class="css">Link1</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="css">Link2</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="css">Link3</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+				</ul>
+				<h3>JavaScript Reference Library</h3>
+				<hr>
+				<ul id="js-read">
+					<li>
+						<input type="checkbox">
+						<a href="#" class="js">Link1</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="js">Link2</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="js">Link3</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+				</ul>
+				<h3>Angular Reference Library</h3>
+				<hr>
+				<ul id="ng-read">
+					<li>
+						<input type="checkbox">
+						<a href="#" class="ng">Link1</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="ng">Link2</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+					<li>
+						<input type="checkbox">
+						<a href="#" class="ng">Link3</a>
+						<p>Subject</p>
+						<button class="edit">Edit</button>
+						<button class="delete">Delete</button>
+					</li>
+				</ul>
 			</div>
 		</section>
 		</div>
 	</main>
+
+	<script type="text/javascript" src=app.js></script>
 </body>
 </html>
