--- a/Tuts & Projects/RefLib/index.html
+++ b/Tuts & Projects/RefLib/index.html
@@ -35,7 +35,7 @@
 				
 				<input type="text" name="subject" id="ref_subj" placeholder="topic discussed">
 
-				<button type="submit" name="submit_link" id="addLink">Add link</button><br>
+				<button>Add link</button><br>
 			</fieldset>	
 
 				<fieldset>
@@ -54,7 +54,7 @@
 			<div class="small-12 medium-12 large-12 columns">
 				<h3>HTML Links to read</h3>
 				<hr>
-				<ul id="html-to-Read">
+				<ul id="html-to-read">
 					<li>
 						<input type="checkbox">
 						<a href="#">Link1</a>
@@ -104,7 +104,7 @@
 				</ul>
 				<h3>JavaScript Links to read</h3>
 				<hr>
-				<ul id="javascript-to-read">
+				<ul id="java-to-read">
 					<li>
 						<input type="checkbox">
 						<a href="#">Link1</a>
@@ -129,7 +129,7 @@
 				</ul>
 				<h3>Angular Links to read</h3>
 				<hr>
-				<ul id="angular-to-read">
+				<ul id="ng-to-read">
 					<li>
 						<input type="checkbox">
 						<a href="#">Link1</a>
