--- a/Tuts & Projects/ajax-basics/index.html
+++ b/Tuts & Projects/ajax-basics/index.html
@@ -16,6 +16,8 @@
         <div class="grid-100">
           <div class="heading">
             <h1>Bring on the AJAX</h1>
+
+            <button id="load" onclick="sendAJAX()">Bring it!</button>
           </div>
           <div id="ajax">
 
@@ -33,7 +35,11 @@
         }
      };
      xhr.open('GET', 'sidebar.html');
-     xhr.send();
+     function sendAJAX() {
+          xhr.send();
+          document.getElementById('load').style.display = "none";
+     }
+   
   </script>
 
 </body>
